--- a/index.html
+++ b/index.html
@@ -9,22 +9,38 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Saira:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>FurniShop</title>
-    
 </head>
-<body>
-    <header class="absolute top-0 left-0 w-full h-20 bg-transparent flex items-center justify-center z-1 text-white">
-        <h1 class="text-3xl font-bold font-[Saira] flex">FurniShop</h1>
-        <ul class = "list-style-type:none flex space-x-24">
-            <li class="text-black-500ml-2 font-bold font-[Saira]">Home</li>
-            <li class="text-black-500ml-2 font-[Saira]">About</li>
-            <li class="text-black-500ml-2 font-[Saira]">Features</li>
-            <li class="text-black-500ml-2 font-[Saira]">Contact</li>
+
+<body class="flex h-screen items-start justify-start bg-gray-100">
+    <header class="absolute top-0 left-0 w-full h-20 bg-transparent flex items-center justify-center z-10 text-white">
+        <h1 class="text-3xl font-bold font-[Saira]">FurniShop</h1>
+        <ul class="flex space-x-24 list-none">
+            <li class="text-black font-bold font-[Saira]">Home</li>
+            <li class="text-black font-[Saira]">About</li>
+            <li class="text-black font-[Saira]">Features</li>
+            <li class="text-black font-[Saira]">Contact</li>
         </ul>
     </header>
     <main>
-        <div class="relative">
-            <img src="./img/sala-mobilia.png" alt="imagem com sofa amarelo" class="w-full h-screen object-cover">
+        <div class="fixed">
+            <img src="./img/sala-mobilia.png" alt="imagem com sofa amarelo" class="w-[1400px] h-[900px] object-cover fixed top-0 left-0">
         </div>
+        <h2 class="text-7xl font-semibold font-[Saira] fixed top-40 left-70 text-white text-center">Creative Home Simpify Your <br> Furniture</h2>
+        <h3 class="text-[20px] font-[Saira] fixed top-96 left-110 text-white text-center">Do i have consent to record this meeting gain locaion, root-and-<br>branch, review, nor game plan who’s the goto</h3>
+        <button class="fixed top-[500px] left-1/2 -translate-x-1/2 px-20 py-4 text-white font-semibold [Saira] text-6x1 bg-white/40 backdrop-blur-md rounded-lg hover:bg-black/70 transition-colors">
+            Shop Now
+        </button>
+
+        <div class= "fixed bottom-8 left-1/2 -translate-x-1/2 bg-[#286F6C] p-20 rounded-lg shadow-lg w-250 z-20 text-white">
+            <ul class="">
+                <li class = >7 year experience</li>
+                <li class = >2 opened in the country</li>
+                <li class = >10k+ Furniture sold</li>
+                <li class = >260+ Variant Furniture</li>
+            </ul>
+        </div>
+        
+
     </main>
 </body>
 </html>
