header foi melhorado, caixa verde foi organizada conforme design e circulos brancos foram inseridos e posicionados

--- a/index.html
+++ b/index.html
@@ -11,36 +11,46 @@
     <title>FurniShop</title>
 </head>
 
-<body class="flex h-screen items-start justify-start bg-gray-100">
-    <header class="absolute top-0 left-0 w-full h-20 bg-transparent flex items-center justify-center z-10 text-white">
-        <h1 class="text-3xl font-bold font-[Saira]">FurniShop</h1>
-        <ul class="flex space-x-24 list-none">
-            <li class="text-black font-bold font-[Saira]">Home</li>
-            <li class="text-black font-[Saira]">About</li>
-            <li class="text-black font-[Saira]">Features</li>
-            <li class="text-black font-[Saira]">Contact</li>
+<body class="xl:flex h-screen items-start justify-start bg-gray-100">
+    <header class="xl:absolute top-0 left-0 w-full h-20 bg-transparent flex items-center justify-center z-10 text-white">
+        <h1 class="xl:text-3xl font-bold font-[Saira] mr-125">FurniShop</h1>
+        <ul class="xl:flex space-x-24 list-none">
+            <li class= "text-white font-bold font-[Saira]">Home</li>
+            <li class="text-white font-[Saira]">About</li>
+            <li class="text-white font-[Saira]">Features</li>
+            <li class="text-white font-[Saira]">Contact</li>
         </ul>
     </header>
     <main>
-        <div class="fixed">
-            <img src="./img/sala-mobilia.png" alt="imagem com sofa amarelo" class="w-[1400px] h-[900px] object-cover fixed top-0 left-0">
+        <div class="xl:relative">
+            <img src="./img/sala-mobilia.png" alt="imagem com sofa amarelo" class="w-[1440px] h-[900px] object-cover fixed top-0 left-0">
         </div>
-        <h2 class="text-7xl font-semibold font-[Saira] fixed top-40 left-70 text-white text-center">Creative Home Simpify Your <br> Furniture</h2>
-        <h3 class="text-[20px] font-[Saira] fixed top-96 left-110 text-white text-center">Do i have consent to record this meeting gain locaion, root-and-<br>branch, review, nor game plan who’s the goto</h3>
-        <button class="fixed top-[500px] left-1/2 -translate-x-1/2 px-20 py-4 text-white font-semibold [Saira] text-6x1 bg-white/40 backdrop-blur-md rounded-lg hover:bg-black/70 transition-colors">
+        <h2 class="xl:text-7xl font-semibold font-[Saira] relative top-40 left-70 text-white text-center">Creative Home Simpify Your <br> Furniture</h2>
+        <h3 class="xl:text-[20px] font-[Saira] fixed top-96 left-110 text-white text-center">Do i have consent to record this meeting gain locaion, root-and-<br>branch, review, nor game plan who’s the goto</h3>
+        <button class="xl:fixed top-[525px] left-1/2 -translate-x-1/2 px-23 py-5 text-white font-semibold font-[Saira] text-xl bg-white/40 backdrop-blur-md rounded-lg hover:bg-black/70 transition-colors">
             Shop Now
         </button>
 
-        <div class= "fixed bottom-8 left-1/2 -translate-x-1/2 bg-[#286F6C] p-20 rounded-lg shadow-lg w-250 z-20 text-white">
-            <ul class="">
-                <li class = >7 year experience</li>
-                <li class = >2 opened in the country</li>
-                <li class = >10k+ Furniture sold</li>
-                <li class = >260+ Variant Furniture</li>
+        <div class= "xl:fixed bottom-8 left-1/2 -translate-x-1/2 bg-[#286F6C] p-10 rounded-[30px] shadow-lg w-300 z-20 text-white">
+            <ul class="xl:flex space-x-35 list-none items-center  text-center text-1xl font-[Saira]">
+                <li class = "xl:border-r-1 pr-18 pl-10">
+                   <span class = "text-4xl font-bold font-semibold"> 7 </span> <br> year experience</li>
+                <li class = "xl:border-r-1 pr-35 pl-0">
+                    <span class = "text-4xl font-bold font-semibold">2</span> <br> Opened in the country</li>
+                <li class = "xl:border-r-1 pr-20 pl-0">
+                    <span class = "text-4xl font-bold font-semibold">10k+</span> <br> Furniture sold</li>
+                <li class = "xl: pl-2 pr-6">
+                    <span class = "text-4xl font-bold font-semibold">260+</span> <br> Variant Furniture</li>
             </ul>
         </div>
-        
-
+        <div class = "xl: relative">
+            <img src="./img/Pin.svg" class = "xl:fixed top-65 right-325" alt="ponto brilhante">
+            <img src="./img/Pin.svg" class = "xl:fixed top-150 right-318" alt="ponto brilhante">
+            <img src="./img/Pin.svg" class = "xl:fixed top-165 right-10" alt="ponto brilhante">
+        </div>
     </main>
+    <footer class="relative">
+        <img src="./img/Rectangle 922.png" class="xl:fixed top-180 right-0" alt="gradiente branco">
+    </footer>
 </body>
 </html>
