--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
 </head>
 
 <body class="xl:flex h-screen items-start justify-start bg-gray-100">
-    <header class="xl:absolute top-0 left-0 w-full h-20 bg-transparent flex items-center justify-center z-10 text-white">
-        <h1 class="text-3xl font-bold font-[Saira] mr-125">FurniShop</h1>
-        <ul class="xl:flex space-x-24 list-none">
+    <header class="xl:absolute top-0 left-0 w-full h-20 bg-transparent flex items-center justify-center z-10 text-white
+    lg:absolute top-0 left-16 w-full h-20 bg-transparent flex items-center justify-center z-10 text-white">
+        <h1 class="xl:text-3xl font-bold font-[Saira] mr-125
+        lg:text-3xl font-bold font-[Saira]"
+        >FurniShop</h1>
+        <ul class="xl:flex space-x-24 list-none
+        lg:flex space-x-8 list-none">
             <li class= "text-white font-bold font-[Saira]">Home</li>
             <li class="text-white font-[Saira]">About</li>
             <li class="text-white font-[Saira]">Features</li>
@@ -22,23 +26,43 @@
         </ul>
     </header>
     <main>
-        <div class="xl:relative">
-            <img src="./img/sala-mobilia.png" 
-                alt="imagem com sofa amarelo"
-                class=" object-cover fixed top-0 left-0
+        <div class="relative">
+            <img src="./img/sofa-mobile.png"
+            alt="sofa amarelo mobile"
+            class="object-cover fixed top-0 left-0
                 w-[393px] h-[852px]
-                xl:w-[1440px] xl:h-[900px]
-                lg:w-[1024px] lg:h-[724px]">
+                xl:hidden
+                lg:hidden">
+        </div>
+
+        <div class-desktop = "relative">
+            <img src="./img/sala-mobilia.png" 
+            alt="imagem com sofa amarelo"
+            class= "xl:object-cover xl:fixed xl:top-0 left-0
+            xl:w-[1440px] xl:h-[900px]">
+        </div>
+
+        <div class-tablet="relative">
+            <img src="./img/tablet-img.png"
+            alt="sofá amarelo"
+            class="lg:object-cover fixed top-0 left-0
+            xl:hidden
+            lg:w-[1024px] lg:h-[724px]">
         </div>
 
         <h2 class="font-semibold font-[Saira] relative text-white text-center
-        xl:text-7xl xl:top-40 xl:left-70
-        lg:text-7xl">
-        Creative Home Simpify Your <br> Furniture
+        xl:fixed xl:text-7xl xl:top-30 xl:left-10 xl:p-20
+        lg:fixed lg:text-7xl lg:top-25 lg:left-5 lg:p-10">
+        Creative Home Simpify Your Furniture
         </h2>
 
-        <h3 class="xl:text-[20px] font-[Saira] fixed top-96 left-110 text-white text-center">Do i have consent to record this meeting gain locaion, root-and-<br>branch, review, nor game plan who’s the goto</h3>
-        <button class="xl:fixed top-[525px] left-1/2 -translate-x-1/2 px-23 py-5 text-white font-semibold font-[Saira] text-xl bg-white/40 backdrop-blur-md rounded-lg hover:bg-black/70 transition-colors">
+        <h3 class="font-[Saira] fixed text-white text-center font-light
+        xl:text-[20px] xl:top-96 xl:left-110
+        lg:text-[23px] lg:top-83 lg:left-40"
+        >Do i have consent to record this meeting gain location, root-and-<br>branch, review, nor game plan who’s the goto</h3>
+        <button class="text-white font-semibold font-[Saira] text-xl bg-white/40 backdrop-blur-md rounded-lg hover:bg-black/70 transition-colors
+        xl:fixed xl:top-[525px] xl:left-1/2 xl:-translate-x-1/2 xl:px-23 xl:py-5
+        lg:fixed lg:top-[440px] lg:left-[370px] lg:px-20 lg:py-4">
             Shop Now
         </button>
 
